--- a/api/products/models/products.settings.json
+++ b/api/products/models/products.settings.json
@@ -19,13 +19,16 @@
       "type": "decimal"
     },
     "description": {
-      "type": "string"
+      "type": "text"
     },
     "imageURL": {
       "type": "string"
     },
     "featured": {
       "type": "boolean"
+    },
+    "heading": {
+      "type": "string"
     }
   }
 }
